# haskell-practice-on-ubuntu

./: README.md
Docs/Crieit/: Haskell を Ubuntu にインストールできねーの（＾〜＾）？.md  Haskellを練習しようぜ(^o^)？.md
chat-server/: CHANGELOG.md  LICENSE  README.md  chat-server.cabal
chat-server/app/: Main step1o0.txt  Main step2o0.txt  Main step3o0.txt  Main step4o0.txt  Main step5o0.txt  Main step6o0.txt  Main.hs
epoch_1_0/: view_shogiban copy 10.hs  view_shogiban copy 11.hs  view_shogiban copy 12.hs  view_shogiban copy 13.hs  view_shogiban copy 14.hs  view_shogiban copy 15.hs  view_shogiban copy 16.hs  view_shogiban copy 17.hs  view_shogiban copy 18.hs  view_shogiban copy 19.hs  view_shogiban copy 2.hs  view_shogiban copy 20.hs  view_shogiban copy 3.hs  view_shogiban copy 4.hs  view_shogiban copy 5.hs  view_shogiban copy 6.hs  view_shogiban copy 7.hs  view_shogiban copy 8.hs  view_shogiban copy 9.hs  view_shogiban copy.hs  view_shogiban.hs
shogi-project/: CHANGELOG.md  README.md  shogi-project.cabal
shogi-project/app/: Main copy.hs  Main.hs
