cabal-version:      2.4
name:               shogi-project
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           shogi engine

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- Home page
homepage:           https://github.com/muzudho/haskell-practice-on-ubuntu

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE

author:             muzudho
maintainer:         muzudho1@gmail.com

-- A copyright notice.
-- copyright:

category:           Game

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable shogi-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        shogi-project

    hs-source-dirs:   app
    default-language: Haskell2010
